--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<iframe src="http://docs.google.com/gview?url=https://drive.google.com/open?id=0B7iwGTCVb6-zRWtmMDBjQV9wSU0&embedded=true" style="width:800px; height:1000px;" frameborder="0"></iframe>
+<iframe src="https://drive.google.com/open?id=0B7iwGTCVb6-zRWtmMDBjQV9wSU0&embedded=true" style="width:800px; height:1000px;" frameborder="0"></iframe>
 
 <!--<a href="assets/Christine%20Baba%20Resume.pdf"> Download Me!</a>-->
 <!--<img src="assets/Christine%20Baba%20Resume.pdf" height="auto" width="auto" class="img-responsive">-->
