--- a/resume.html
+++ b/resume.html
@@ -3,13 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <title>Resume</title>
+
+    <link rel="stylesheet" type="text/css" href="assets/style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
+          integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 </head>
 <body>
+<nav class="navbar navbar-toggleable-md navbar-light bg-faded ">
 
-<iframe src="https://drive.google.com/open?id=0B7iwGTCVb6-zRWtmMDBjQV9wSU0&embedded=true" style="width:800px; height:1000px;" frameborder="0"></iframe>
+    <a class="navbar-brand navbar-left" href="#"> <img src="assets/name.jpeg"
+                                                       style="height: 50px; width: 110px; background-color: white"></a>
+
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+            data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+            aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="nav navbar-nav navbar-right">
+            <a class="nav-item nav-link" href="/">Home</a>
+
+
+
+
+            <!--<a class="nav-item nav-link"-->
+            <!--onClick="location.href='https://github.com/christin3/Christine/blob/master/assets/ChristineBabaResume.pdf'">-->
+            <!--Resume-->
+            <!--</a>-->
+
+        </div>
+
+    </div>
+
+</nav>
+
+<iframe src="https://docs.google.com/viewer?srcid=0B7iwGTCVb6-zRWtmMDBjQV9wSU0&pid=explorer&efh=false&a=v&chrome=false&embedded=true" width="100%" height="1000px"></iframe>
 
 <!--<a href="assets/Christine%20Baba%20Resume.pdf"> Download Me!</a>-->
 <!--<img src="assets/Christine%20Baba%20Resume.pdf" height="auto" width="auto" class="img-responsive">-->
 </body>
 </html>
-
