--- a/resume.html
+++ b/resume.html
@@ -9,10 +9,10 @@
           integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 </head>
 <body>
-<nav class="navbar navbar-toggleable-md navbar-light bg-faded ">
+<nav class="navbar navbar-toggleable-md navbar-light bg-faded " style="background-color: white">
 
     <a class="navbar-brand navbar-left" href="#"> <img src="assets/name.jpeg"
-                                                       style="height: 50px; width: 110px; background-color: white"></a>
+                                                       style="height: 50px; width: 110px;"></a>
 
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
             data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
