--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
 <body>
 <nav class="navbar navbar-toggleable-md navbar-light bg-faded " style="background-color: white">
 
-    <a class="navbar-brand navbar-left" href="#"> <img src="assets/name.jpeg"
+    <a class="navbar-brand navbar-left" href="/"> <img src="assets/name.jpeg"
                                                        style="height: 50px; width: 110px;"></a>
 
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
