--- a/index.html
+++ b/index.html
@@ -51,10 +51,9 @@
                 <a class="nav-item nav-link" href="resume.html">Resume</a>
 
 
-
                 <!--<a class="nav-item nav-link"-->
-                   <!--onClick="location.href='https://github.com/christin3/Christine/blob/master/assets/ChristineBabaResume.pdf'">-->
-                    <!--Resume-->
+                <!--onClick="location.href='https://github.com/christin3/Christine/blob/master/assets/ChristineBabaResume.pdf'">-->
+                <!--Resume-->
                 <!--</a>-->
 
             </div>
@@ -89,7 +88,7 @@
             <div class="row" style="margin-left: 25px; margin-right: 25px">
 
                 <div class="col-lg-4 center-block" style="width: auto; padding-bottom: 25px;">
-                    <img src="assets/headShot.png" height="auto" width="auto" class="img-responsive headshot " >
+                    <img src="assets/headShot.png" height="auto" width="auto" class="img-responsive headshot ">
                     <br>
                 </div>
 
@@ -481,14 +480,14 @@
                                                       required
                                                       data-validation-required-message="Please enter a message."></textarea>
                                             <p class="help-block text-danger"></p>
+                                            <div id="success"></div>
+                                            <button type="submit" class="btn" style="float:left;">Send</button>
+
+
                                         </div>
+
                                     </div>
-                                    <div id="success"></div>
-                                    <div class="row">
-                                        <div class="form-group">
-                                            <button type="submit" class="btn">Send</button>
-                                        </div>
-                                    </div>
+
                                 </form>
                             </div>
 
