--- a/index.html
+++ b/index.html
@@ -531,9 +531,23 @@
                     alt="Website Security Test" border="0"/></a>
         </footer>
     </div>
+    <a href="javascript:" id="return-to-top"><i class="fa fa-hand-o-up" aria-hidden="true"></i></a>
 </div>
-<script>
 
+<script>
+    // ===== Scroll to Top ====
+    $(window).scroll(function () {
+        if ($(this).scrollTop() >= 50) {        // If page is scrolled more than 50px
+            $('#return-to-top').fadeIn(200);    // Fade in the arrow
+        } else {
+            $('#return-to-top').fadeOut(200);   // Else fade out the arrow
+        }
+    });
+    $('#return-to-top').click(function () {      // When arrow is clicked
+        $('body,html').animate({
+            scrollTop: 0                       // Scroll to top of body
+        }, 500);
+    });
 
     (function (i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
