--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link href='//cdn.jsdelivr.net/devicons/1.8.0/css/devicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.0/css/hover.css"/>
     <link rel="stylesheet" type="text/css" href="assets/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Nixie One" rel="stylesheet">
 
 
 </head>
@@ -34,8 +35,8 @@
 
     <nav class="navbar navbar-toggleable-md navbar-light bg-faded ">
 
-        <a class="navbar-brand navbar-left" href="#"> <img src="assets/name.jpeg"
-                                                           style="height: 50px; width: 110px"></a>
+        <a class="navbar-brand navbar-left" href="#" style="text-align: left">
+            <img src="assets/name.jpeg" style="height: 50px; width: 110px"></a>
 
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                 data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
