--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
         <div id="transcontainer3"></div>
 
         <div id="container4">
-            <div style="height:500px;background-color:white; opacity:.8;font-size:36px">
+            <div style="height:auto ;background-color:white;font-size:36px">
 
                 <section id="contact">
                     <div class="container">
@@ -453,7 +453,6 @@
                         </div>
                         <div class="row ">
                             <div class="col-md-6 ">
-
                                 <form method="POST" action="http://formspree.io/baba.christine@gmail.com">
                                     <div class="row control-group">
                                         <div class="form-group col-lg-6 floating-label-form-group controls">
@@ -524,7 +523,7 @@
                 <br>
             </p>
             <p style="text-align: center;">
-                © 2017 Christine Baba
+                Made with &#9825; © 2017
             </p>
 
             <a href="http://www.beyondsecurity.com/vulnerability-scanner-verification/www.christinebaba.com"><img
