--- a/index.html
+++ b/index.html
@@ -93,11 +93,10 @@
                     <br>
                 </div>
 
-                <div class="col-lg-6 center-block" id="aboutMe" style="font-size: 20px;">
+                <div class="col-lg-6 center-block" id="aboutMe" style="font-size: 25px;">
 
-                    I am a newly minted full-stack web developer focused on implementing MEAN stack technologies. I
-                    enjoy
-                    creating visually pleasing sites focused on simplicity, functionality, and ease of use.<br>
+                    I am a newly minted full-stack web developer focused on creating visually pleasing sites that are
+                    simplistic, functional,and easy to use.<br>
 
                     I prefer to hit the ground running, as they say, when learning something new and truly thrive on the
                     satisfaction of solving problems that arise in any situation.
