--- a/index.html
+++ b/index.html
@@ -422,9 +422,9 @@
                                     href="https://github.com/christin3/Angular2-To-Do-List"
                                     target="_blank">Code!</a></button>
                             <br><br>
-                            <button class=" appLink btn btn-success"><a href=""
-                                                                        target="_blank">Demo!</a></button>
-                            <br><br>
+                            <!--<button class=" appLink btn btn-success"><a href=""-->
+                                                                        <!--target="_blank">Demo!</a></button>-->
+                            <!--<br><br>-->
                             <p data-dismiss="modal"><i
                                     class="fa fa-times"></i> Close
                             </p>
