--- a/resume.html
+++ b/resume.html
@@ -9,10 +9,10 @@
           integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 </head>
 <body>
-<nav class="navbar navbar-toggleable-md navbar-light bg-faded " style="background-color: white">
+<nav class="navbar navbar-toggleable-md navbar-light bg-faded " style="background-color: white;">
 
-    <a class="navbar-brand navbar-left" href="/"> <img src="assets/name.jpeg"
-                                                       style="height: 50px; width: 110px;"></a>
+    <a class="navbar-brand navbar-left" href="#" style="text-align: left">
+        <img src="assets/name.jpeg" style="height: 50px; width: 110px"></a>
 
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
             data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
@@ -24,6 +24,12 @@
         <div class="nav navbar-nav navbar-right">
             <a class="nav-item nav-link" href="/">Home</a>
 
+
+
+            <!--<a class="nav-item nav-link"-->
+            <!--onClick="location.href='https://github.com/christin3/Christine/blob/master/assets/ChristineBabaResume.pdf'">-->
+            <!--Resume-->
+            <!--</a>-->
 
         </div>
 
