--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
 
                 <div class="col-lg-6 center-block" id="aboutMe" style="font-size: 25px;">
 
-                    I am a newly minted full-stack web developer focused on creating visually pleasing sites that are
+                    I am a thinker, a tinker and full-stack web developer, focused on creating visually pleasing sites that are
                     simplistic, functional, and easy to use.<br>
 
                     I prefer to hit the ground running, as they say, when learning something new and truly thrive on the
                     satisfaction of solving problems that arise in any situation.
 
                     <div style="padding-top: 20px">
-                        <p style=" font-size: 30px; text-align: center; padding-top: 20px;">Preferred Tech Stack<br>
+                        <p style=" font-size: 30px; text-align: center; padding-top: 20px;">Skills<br>
                             <span style=" font-size: 50px" class="devicons devicons-html5 hvr-bounce-in"
                                   title="HTML5"></span>
                             <span style=" font-size: 50px" class="devicons devicons-css3 hvr-bounce-in"
