Added linked in badge

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
                 <a class="nav-item nav-link" href="#container3">Projects</a>
                 <a class="nav-item nav-link" href="#container4">Contact</a>
                 <a class="nav-item nav-link" href="resume.html">Resume</a>
+                <a href="https://github.com/christin3" title="Github" target="_blank">
+                    <i class="fa fa-github fa-2x hvr-bounce-in " aria-hidden="true"
+                       style="padding-top: 5px;"></i></a>
 
 
                 <!--<a class="nav-item nav-link"-->
@@ -95,7 +98,8 @@
 
                 <div class="col-lg-6 center-block" id="aboutMe" style="font-size: 25px;">
 
-                    I am a thinker, a tinker and full-stack web developer, focused on creating visually pleasing sites that are
+                    I am a thinker, a tinker and full-stack web developer, focused on creating visually pleasing sites
+                    that are
                     simplistic, functional, and easy to use.<br>
 
                     I prefer to hit the ground running, as they say, when learning something new and truly thrive on the
@@ -142,7 +146,8 @@
     <div id="container3" class=" text-center">
 
 
-        <h1 style=" padding-top: 25px; padding-bottom: 10px; ">{Projects}</h1>
+        <h1 style=" padding-top: 25px; padding-bottom: 10px; ">{Projects}
+            </h1>
         <hr>
         <!-- Portfolio Grid Section -->
         <section id="portfolio">
@@ -474,7 +479,7 @@
                                     <div class="row control-group">
                                         <div class="form-group col-lg-12 floating-label-form-group controls">
 
-                                            <textarea rows="5" class="form-control" placeholder="Message"
+                                            <textarea rows="14" class="form-control" placeholder="Message"
                                                       name="message " id="message"
                                                       required
                                                       data-validation-required-message="Please enter a message."></textarea>
@@ -491,20 +496,17 @@
                             </div>
 
 
-                            <div class="col-md-6">
+                            <div class="col-lg-6">
 
-                                <a href="https://www.linkedin.com/in/christinebaba" title="LinkedIn" target="_blank">
-                                    <i class="fa fa-linkedin-square fa-5x hvr-bounce-in" aria-hidden="true"
-                                       style="padding-right: 20px"></i></a>
+                                <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US"
+                                     data-type="vertical" data-theme="light" data-vanity="christinebaba"><a
+                                        class="LI-simple-link"
+                                        href='https://www.linkedin.com/in/christinebaba?trk=profile-badge'>Christine
+                                    Baba</a></div>
 
-                                <a href="https://github.com/christin3" title="Github" target="_blank">
-                                    <i class="fa fa-github fa-5x hvr-bounce-in " aria-hidden="true"
-                                       style="padding-right: 20px"></i></a>
-
-                                <a href="mailto:baba.christine@gmail.com" title="email" target="_blank">
-                                    <i class="fa fa-envelope-o fa-5x hvr-bounce-in" aria-hidden="true"
-                                       style="padding-right: 20px"></i></a>
-
+                                <!--<a href="https://www.linkedin.com/in/christinebaba" title="LinkedIn" target="_blank">-->
+                                <!--<i class="fa fa-linkedin-square fa-5x hvr-bounce-in" aria-hidden="true"-->
+                                <!--style="padding-right: 20px"></i></a>-->
 
                             </div>
                         </div>
@@ -518,9 +520,7 @@
 
 
         <footer>
-            <p style="text-align: center;">
-                <br>
-            </p>
+
             <p style="text-align: center;">
                 Made with &#9825; © 2017
             </p>
@@ -528,6 +528,7 @@
             <a href="http://www.beyondsecurity.com/vulnerability-scanner-verification/www.christinebaba.com"><img
                     src="https://seal.beyondsecurity.com/verification-images/www.christinebaba.com/vulnerability-scanner-2.gif"
                     alt="Website Security Test" border="0"/></a>
+
         </footer>
     </div>
     <a href="javascript:" id="return-to-top"><i class="fa fa-hand-o-up" aria-hidden="true"></i></a>
@@ -575,6 +576,7 @@
 <script src='http://cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js'></script>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/stats.js/r11/Stats.js'></script>
 <script src="js/index.js"></script>
+<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 
 
 </body>
