--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                             </div>
                         </div>
                         <div class="row ">
-                            <div class="col-md-6 ">
+                            <div class="col-md-6 center-block ">
                                 <form method="POST" action="http://formspree.io/baba.christine@gmail.com">
                                     <div class="row control-group">
                                         <div class="form-group col-lg-6 floating-label-form-group controls">
@@ -496,7 +496,7 @@
                             </div>
 
 
-                            <div class="col-lg-6">
+                            <div class="col-lg-6 center-block">
 
                                 <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US"
                                      data-type="vertical" data-theme="light" data-vanity="christinebaba"><a
