clean up website

--- a/index.html
+++ b/index.html
@@ -32,18 +32,14 @@
 <body>
 <div class="se-pre-con"></div>
 <div id="container-fluid">
-
     <nav class="navbar navbar-toggleable-md navbar-light bg-faded ">
-
         <a class="navbar-brand navbar-left" href="#" style="text-align: left">
-            <img src="assets/name.jpeg" style="height: 50px; width: 110px"></a>
-
+            Christine Baba
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                 data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                 aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="nav navbar-nav navbar-right">
                 <a class="nav-item nav-link" href="#container2">About</a>
@@ -53,24 +49,14 @@
                 <a href="https://github.com/christin3" title="Github" target="_blank">
                     <i class="fa fa-github fa-2x hvr-bounce-in " aria-hidden="true"
                        style="padding-top: 5px;"></i></a>
-
-
-                <!--<a class="nav-item nav-link"-->
-                <!--onClick="location.href='https://github.com/christin3/Christine/blob/master/assets/ChristineBabaResume.pdf'">-->
-                <!--Resume-->
-                <!--</a>-->
-
             </div>
-
         </div>
-
     </nav>
 
 
     <div id="container1">
         <canvas id="canvas"></canvas>
         <div class="content">
-
             <!--<div class="container " style="height:200px; width:500px;background-color:white; opacity:.8;font-size:36px">-->
             <!--<div class="row text-center ">-->
             <!--<div class="col-lg-12 fadeIn " style="margin-top: 75px ">-->
@@ -78,8 +64,6 @@
             <!--</div>-->
             <!--</div>-->
             <!--</div>-->
-
-
         </div>
     </div>
 
@@ -87,21 +71,15 @@
     <div id="container2">
 
         <div class="container-fluid">
-            <h1 style=" padding-top: 25px; padding-bottom: 10px; text-align: center;">{Hello, I'm Christine!}</h1>
+            <h1 style=" padding-top: 25px; padding-bottom: 10px; text-align: center;">Hello, I'm Christine!</h1>
             <hr style="text-align: center;">
             <div class="row" style="margin-left: 25px; margin-right: 25px">
-
                 <div class="col-lg-4 center-block" style="width: auto; padding-bottom: 25px;">
                     <img src="assets/headShot.png" height="auto" width="auto" class="img-responsive headshot ">
                     <br>
                 </div>
-
                 <div class="col-lg-6 center-block" id="aboutMe" style="font-size: 25px;">
-
-                    I am a thinker, a tinker and full-stack web developer, focused on creating visually pleasing sites
-                    that are
-                    simplistic, functional, and easy to use.<br>
-
+                    I am a thinker, a tinker and QA Engineer with development roots.<br>
                     I prefer to hit the ground running, as they say, when learning something new and truly thrive on the
                     satisfaction of solving problems that arise in any situation.
 
@@ -111,18 +89,18 @@
                                   title="HTML5"></span>
                             <span style=" font-size: 50px" class="devicons devicons-css3 hvr-bounce-in"
                                   title="CSS"></span>
-                            <span style=" font-size: 50px" class="devicons devicons-bootstrap hvr-bounce-in"
-                                  title="Bootstrap"></span>
                             <span style=" font-size: 50px" class="devicons devicons-javascript hvr-bounce-in"
                                   title="Javascript"></span>
-                            <span style=" font-size: 50px" class="devicons devicons-jquery hvr-bounce-in"
-                                  title="jQuery"></span>
+                            <span style=" font-size: 50px" class="devicons devicons-ruby hvr-bounce-in"
+                                  title="Ruby"></span>
+                            <span style=" font-size: 50px" class="devicons devicons-rails hvr-bounce-in"
+                                  title="Rails"></span>
                             <span style=" font-size: 50px" class="devicons devicons-nodejs hvr-bounce-in"
                                   title="NodeJS"></span>
                             <span style=" font-size: 50px" class="devicons devicons-npm hvr-bounce-in"
                                   title="NPM"></span>
-                            <span style=" font-size: 50px" class="devicons devicons-mongodb hvr-bounce-in"
-                                  title="MongoDB"></span>
+                            <span style=" font-size: 50px" class="devicons devicons-postgresql hvr-bounce-in"
+                                  title="PSQL"></span>
                             <span style=" font-size: 50px" class="devicons devicons-mysql hvr-bounce-in"
                                   title="mySQL"></span>
                             <span style=" font-size: 50px" class="devicons devicons-heroku hvr-bounce-in"
@@ -147,7 +125,7 @@
 
 
         <h1 style=" padding-top: 25px; padding-bottom: 10px; ">{Projects}
-            </h1>
+        </h1>
         <hr>
         <!-- Portfolio Grid Section -->
         <section id="portfolio">
@@ -230,10 +208,8 @@
                                  class="img-responsive img-centered"
                                  alt="Day With Your Dog">
                             <br><br>
-                            <p class="">
-                                A web site that uses your current location to find dog friendly restaurants,
-                                bars and parks
-                                in your area.</p>
+                            <p>A web site that uses your current location to find dog friendly restaurants,
+                                bars and parks in your area.</p>
                             <button class=" appLink btn btn-info"><a
                                     href="https://github.com/christin3/A-Day-With-Your-Dog" target="_blank">
                                 Code!</a></button>
@@ -246,7 +222,6 @@
                                     class="fa fa-times"></i> Close
                             </p>
                         </div>
-
                     </div>
                 </div>
             </div>
@@ -261,18 +236,16 @@
                 </div>
                 <div class="container">
                     <div class="row">
-
                         <div class="modal-body">
                             <h2>Crystal Collector</h2>
                             <hr>
                             <img src="assets/projects/gem.png" style=" width: auto; height: 300px;padding-bottom: 25px"
                                  class="img-responsive img-centered" alt="">
 
-                            <p class="">Interactive game where player clicks on a crystal, it will
-                                add a
-                                specific amount of points to the player's total score. When this score matches
-                                the random
-                                number the player wins. If the score goes over the random number the player will
+                            <p>Interactive game where player clicks on a crystal, it will
+                                add a specific amount of points to the player's total score. When this score matches
+                                the random number the player wins. If the score goes over the random number the player
+                                will
                                 lose. </p>
                             <button class=" appLink btn btn-info"><a
                                     href="https://github.com/christin3/Crystal-Collector"
@@ -286,7 +259,6 @@
                                     class="fa fa-times"></i> Close
                             </p>
                         </div>
-
                     </div>
                 </div>
                 <br> <br>
@@ -310,7 +282,7 @@
                             <img src="assets/projects/gnome_hipster.png"
                                  style=" width: auto; height: 300px;padding-bottom: 25px"
                                  class="img-responsive img-centered" alt="">
-                            <p class="">App that enables users to sync a micro-controller to their
+                            <p>App that enables users to sync a micro-controller to their
                                 user
                                 dashboard to control house-hold items like lights, garage doors, etc.</p>
 
@@ -348,9 +320,9 @@
                             <img src="assets/projects/reddit.jpg"
                                  style=" width: auto; height: 300px;padding-bottom: 25px"
                                  class="img-responsive img-centered" alt="">
-                            <p class="">You can now scrape any subreddit! Add notes to your
+                            <p>You can now scrape any subreddit! Add notes to your
                                 favorite links,
-                                then delete them. You can also clear the database.HTTP hyperlinks are only
+                                then delete them. You can also clear the database. HTTP hyperlinks are only
                                 clickable. r/
                                 links do not work as of right now.
                             </p>
@@ -386,7 +358,7 @@
                             <hr>
                             <img src="assets/projects/quiz.png" style=" width: auto; height: 300px;padding-bottom: 25px"
                                  class="img-responsive img-centered" alt="">
-                            <p class="">A fun rocks and mineral themed trivia game. Only one
+                            <p>A fun rocks and mineral themed trivia game. Only one
                                 question can be
                                 answered at a time. Trivia game is timed! </p>
                             <button class=" appLink btn btn-info"><a href="https://github.com/christin3/Trivia-Game"
@@ -422,7 +394,7 @@
                             <img src="assets/projects/todo.png"
                                  style=" width: auto; height: 300px;padding-bottom: 25px;"
                                  class="img-responsive img-centered" alt="">
-                            <p class="">A todo list made with Angular 2.</p>
+                            <p>A todo list made with Angular 2.</p>
                             <button class=" appLink btn btn-info"><a
                                     href="https://github.com/christin3/Angular2-To-Do-List"
                                     target="_blank">Code!</a></button>
@@ -445,7 +417,6 @@
 
         <div id="container4">
             <div style="height:auto ;background-color:white;font-size:36px">
-
                 <section id="contact">
                     <div class="container">
                         <div class="row ">
@@ -533,7 +504,6 @@
     </div>
     <a href="javascript:" id="return-to-top"><i class="fa fa-hand-o-up" aria-hidden="true"></i></a>
 </div>
-
 <script>
     // ===== Scroll to Top ====
     $(window).scroll(function () {
@@ -548,12 +518,11 @@
             scrollTop: 0                       // Scroll to top of body
         }, 500);
     });
-
     (function (i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
         i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
         a = s.createElement(o),
             m = s.getElementsByTagName(o)[0];
         a.async = 1;
@@ -577,8 +546,6 @@
 <script src='http://cdnjs.cloudflare.com/ajax/libs/stats.js/r11/Stats.js'></script>
 <script src="js/index.js"></script>
 <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
-
-
 </body>
 </html>
 
