--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,7 @@
 <nav class="navbar navbar-toggleable-md navbar-light bg-faded " style="background-color: white;">
 
     <a class="navbar-brand navbar-left" href="#" style="text-align: left">
-        <img src="assets/name.jpeg" style="height: 50px; width: 110px"></a>
+        Christine Baba</a>
 
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
             data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
@@ -23,18 +23,12 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="nav navbar-nav navbar-right">
             <a class="nav-item nav-link" href="/">Home</a>
-
-
-
             <!--<a class="nav-item nav-link"-->
             <!--onClick="location.href='https://github.com/christin3/Christine/blob/master/assets/ChristineBabaResume.pdf'">-->
             <!--Resume-->
             <!--</a>-->
-
         </div>
-
     </div>
-
 </nav>
 
 <iframe src="https://docs.google.com/viewer?srcid=0B7iwGTCVb6-zOEhWaE51MjVqU2c&pid=explorer&efh=false&a=v&chrome=false&embedded=true"
