--- a/resume.html
+++ b/resume.html
@@ -23,18 +23,11 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="nav navbar-nav navbar-right">
             <a class="nav-item nav-link" href="/">Home</a>
-            <!--<a class="nav-item nav-link"-->
-            <!--onClick="location.href='https://github.com/christin3/Christine/blob/master/assets/ChristineBabaResume.pdf'">-->
-            <!--Resume-->
-            <!--</a>-->
         </div>
     </div>
 </nav>
 
-<iframe src="https://docs.google.com/viewer?srcid=0B7iwGTCVb6-zOEhWaE51MjVqU2c&pid=explorer&efh=false&a=v&chrome=false&embedded=true"
-        width="100%" height="1000px"></iframe>
+<iframe id="fred" style="border:1px solid #666CCC" title="Christine Baba" src="assets/ChristineBabaResume.pdf" frameborder="1" scrolling="auto" height="1100" width="850" ></iframe>
 
-<!--<a href="assets/Christine%20Baba%20Resume.pdf"> Download Me!</a>-->
-<!--<img src="assets/Christine%20Baba%20Resume.pdf" height="auto" width="auto" class="img-responsive">-->
 </body>
 </html>
