--- a/resume.html
+++ b/resume.html
@@ -27,7 +27,7 @@
     </div>
 </nav>
 
-<iframe id="fred" style="border:1px solid #666CCC" title="Christine Baba" src="assets/ChristineBabaResume.pdf" frameborder="1" scrolling="auto" height="1100" width="850" ></iframe>
+<iframe id="fred" style="border:1px solid #666CCC" title="Christine Baba" src="assets/ChristineBaba.pdf" frameborder="1" scrolling="auto" height="1100" width="850" ></iframe>
 
 </body>
 </html>
