--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html style=" height: 100%; overflow-x: hidden">
 <head>
-    <script src="//load.sumome.com/"
-            data-sumo-site-id="bfe76379be76cac752d8d3bc8e81024a159a87ca902fbf7348db26de9f93a127" async="async"></script>
-
     <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="https://use.fontawesome.com/5c547b1e5d.js"></script>
@@ -53,33 +50,14 @@
                 <a href="https://github.com/christin3" title="Github" target="_blank">
                     <i class="fa fa-github fa-2x hvr-bounce-in " aria-hidden="true"
                        style="padding-top: 5px;"></i></a>
-
-
-                <!--<a class="nav-item nav-link"-->
-                <!--onClick="location.href='https://github.com/christin3/Christine/blob/master/assets/ChristineBabaResume.pdf'">-->
-                <!--Resume-->
-                <!--</a>-->
-
             </div>
-
         </div>
-
     </nav>
 
 
     <div id="container1">
         <canvas id="canvas"></canvas>
         <div class="content">
-
-            <!--<div class="container " style="height:200px; width:500px;background-color:white; opacity:.8;font-size:36px">-->
-            <!--<div class="row text-center ">-->
-            <!--<div class="col-lg-12 fadeIn " style="margin-top: 75px ">-->
-            <!--Welcome to My Site!-->
-            <!--</div>-->
-            <!--</div>-->
-            <!--</div>-->
-
-
         </div>
     </div>
 
@@ -99,9 +77,8 @@
                 <div class="col-lg-6 center-block" id="aboutMe" style="font-size: 25px;">
 
                     I am a thinker, a tinker and full-stack web developer, focused on creating visually pleasing sites
-                    that are
-                    simplistic, functional, and easy to use.<br>
-
+                    that are simplistic, functional, and easy to use.
+                    <br>
                     I prefer to hit the ground running, as they say, when learning something new and truly thrive on the
                     satisfaction of solving problems that arise in any situation.
 
@@ -130,24 +107,14 @@
                         </p>
                     </div>
                 </div>
-
-
             </div>
-
-
         </div>
-
-
     </div>
 
     <div id="transcontainer2"></div>
-
-
     <div id="container3" class=" text-center">
-
-
         <h1 style=" padding-top: 25px; padding-bottom: 10px; ">{Projects}
-            </h1>
+        </h1>
         <hr>
         <!-- Portfolio Grid Section -->
         <section id="portfolio">
@@ -197,14 +164,14 @@
                                  alt="Trivia Game">
                         </a>
                     </div>
-                    <div class="col-sm-4 portfolio-item hvr-bounce-in">
-                        <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
-                            {To-Do List}
-                            <br><br>
-                            <img src="assets/projects/todo.png" height="150" width="125" class="img-responsive"
-                                 alt="Angular Note Taker">
-                        </a>
-                    </div>
+                    <!--<div class="col-sm-4 portfolio-item hvr-bounce-in">-->
+                        <!--<a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">-->
+                            <!--{To-Do List}-->
+                            <!--<br><br>-->
+                            <!--<img src="assets/projects/todo.png" height="150" width="125" class="img-responsive"-->
+                                 <!--alt="Angular Note Taker">-->
+                        <!--</a>-->
+                    <!--</div>-->
                 </div>
             </div>
 
@@ -416,24 +383,24 @@
                 <div class="container">
                     <div class="row col-centered">
 
-                        <div class="modal-body">
-                            <h2>Angular2 To Do List</h2>
-                            <hr>
-                            <img src="assets/projects/todo.png"
-                                 style=" width: auto; height: 300px;padding-bottom: 25px;"
-                                 class="img-responsive img-centered" alt="">
-                            <p class="">A todo list made with Angular 2.</p>
-                            <button class=" appLink btn btn-info"><a
-                                    href="https://github.com/christin3/Angular2-To-Do-List"
-                                    target="_blank">Code!</a></button>
-                            <br><br>
-                            <!--<button class=" appLink btn btn-success"><a href=""-->
-                            <!--target="_blank">Demo!</a></button>-->
-                            <!--<br><br>-->
-                            <p data-dismiss="modal"><i
-                                    class="fa fa-times"></i> Close
-                            </p>
-                        </div>
+                        <!--<div class="modal-body">-->
+                        <!--<h2>Angular2 To Do List</h2>-->
+                        <!--<hr>-->
+                        <!--<img src="assets/projects/todo.png"-->
+                        <!--style=" width: auto; height: 300px;padding-bottom: 25px;"-->
+                        <!--class="img-responsive img-centered" alt="">-->
+                        <!--<p class="">A todo list made with Angular 2.</p>-->
+                        <!--<button class=" appLink btn btn-info"><a-->
+                        <!--href="https://github.com/christin3/Angular2-To-Do-List"-->
+                        <!--target="_blank">Code!</a></button>-->
+                        <!--<br><br>-->
+                        <!--&lt;!&ndash;<button class=" appLink btn btn-success"><a href=""&ndash;&gt;-->
+                        <!--&lt;!&ndash;target="_blank">Demo!</a></button>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<br><br>&ndash;&gt;-->
+                        <!--<p data-dismiss="modal"><i-->
+                        <!--class="fa fa-times"></i> Close-->
+                        <!--</p>-->
+                        <!--</div>-->
 
                     </div>
                 </div>
@@ -552,8 +519,8 @@
     (function (i, s, o, g, r, a, m) {
         i['GoogleAnalyticsObject'] = r;
         i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
         a = s.createElement(o),
             m = s.getElementsByTagName(o)[0];
         a.async = 1;
