--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html style=" height: 100%; overflow-x: hidden">
 <head>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.js"></script>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="https://use.fontawesome.com/5c547b1e5d.js"></script>
     <meta charset="UTF-8">
 
@@ -279,7 +279,7 @@
 
                             <br><br>
 
-                            <button class=" appLink btn btn-success"><a href="http://gnome-home.herokuapp.com"
+                            <button class=" appLink btn btn-success"><a href="https://gnome-home.herokuapp.com"
                                                                         target="_blank">Demo!</a></button>
                             <br><br>
                             <p data-dismiss="modal"><i
@@ -437,7 +437,7 @@
                         </div>
                         <div class="row ">
                             <div class="col-md-6 center-block ">
-                                <form method="POST" action="http://formspree.io/baba.christine@gmail.com">
+                                <form method="POST" action="https://formspree.io/baba.christine@gmail.com">
                                     <div class="row control-group">
                                         <div class="form-group col-lg-6 floating-label-form-group controls">
 
@@ -502,12 +502,8 @@
         <footer>
 
             <p style="text-align: center;">
-                Made with &#9825; © 2017
+                Made with &#9825; © 2020
             </p>
-
-            <a href="http://www.beyondsecurity.com/vulnerability-scanner-verification/www.christinebaba.com"><img
-                    src="https://seal.beyondsecurity.com/verification-images/www.christinebaba.com/vulnerability-scanner-2.gif"
-                    alt="Website Security Test" border="0"/></a>
 
         </footer>
     </div>
@@ -551,8 +547,8 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"
         integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
         crossorigin="anonymous"></script>
-<script src='http://cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js'></script>
-<script src='http://cdnjs.cloudflare.com/ajax/libs/stats.js/r11/Stats.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/stats.js/r11/Stats.js'></script>
 <script src="js/index.js"></script>
 <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 </body>
