--- a/resume.html
+++ b/resume.html
@@ -27,8 +27,8 @@
     </div>
 </nav>
 
-<!-- <iframe id="fred" style="border:1px solid #666CCC" title="Christine Baba" src="assets/ChristineBaba.pdf" frameborder="1" scrolling="auto" height="1100" width="850" ></iframe> -->
+ <iframe id="fred" style="border:1px solid #666CCC" title="Christine Baba" src="assets/ChristineBabaWS.pdf" frameborder="1" scrolling="auto" height="1100" width="850" ></iframe>
 
-    <h1> Coming Soon </h1>
+<h1> Coming Soon </h1>
 </body>
 </html>
