--- a/resume.html
+++ b/resume.html
@@ -1,33 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Resume</title>
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>Resume</title>-->
 
-    <link rel="stylesheet" type="text/css" href="assets/style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
-          integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-</head>
-<body>
-<nav class="navbar navbar-toggleable-md navbar-light bg-faded " style="background-color: white;">
+<!--    <link rel="stylesheet" type="text/css" href="assets/style.css">-->
+<!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"-->
+<!--          integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">-->
+<!--</head>-->
+<!--<body>-->
+<!--<nav class="navbar navbar-toggleable-md navbar-light bg-faded " style="background-color: white;">-->
 
-    <a class="navbar-brand navbar-left" href="#" style="text-align: left">
-        Christine Baba</a>
+<!--    <a class="navbar-brand navbar-left" href="#" style="text-align: left">-->
+<!--        Christine Baba</a>-->
 
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-            data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
-            aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+<!--    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"-->
+<!--            data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"-->
+<!--            aria-label="Toggle navigation">-->
+<!--        <span class="navbar-toggler-icon"></span>-->
+<!--    </button>-->
 
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="nav navbar-nav navbar-right">
-            <a class="nav-item nav-link" href="/">Home</a>
-        </div>
-    </div>
-</nav>
+<!--    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">-->
+<!--        <div class="nav navbar-nav navbar-right">-->
+<!--            <a class="nav-item nav-link" href="/">Home</a>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</nav>-->
 
- <iframe id="fred" style="border:1px solid #666CCC" title="Christine Baba" src="assets/ChristineBabaWS.pdf" frameborder="1" scrolling="auto" height="1100" width="850" ></iframe>
+<!-- <iframe id="fred" style="border:1px solid #666CCC" title="Christine Baba" src="assets/ChristineBabaWS.pdf" frameborder="1" scrolling="auto" height="1100" width="850" ></iframe>-->
 
-</body>
-</html>
+<!--</body>-->
+<!--</html>-->
