--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
             <div class="nav navbar-nav navbar-right">
                 <a class="nav-item nav-link" href="#container2">About</a>
                 <a class="nav-item nav-link" href="#container3">Projects</a>
-                <a class="nav-item nav-link" href="#container4">Contact</a>
-                <a class="nav-item nav-link" href="resume.html">Resume</a>
+<!--                <a class="nav-item nav-link" href="#container4">Contact</a>-->
                 <a href="https://github.com/christin3" title="Github" target="_blank">
                     <i class="fa fa-github fa-2x hvr-bounce-in " aria-hidden="true"
                        style="padding-top: 5px;"></i></a>
@@ -64,13 +63,13 @@
             <h1 style=" padding-top: 25px; padding-bottom: 10px; text-align: center;">Hello, I'm Christine!</h1>
             <hr style="text-align: center;">
             <div class="row" style="margin-left: 25px; margin-right: 25px">
-                <div class="col-lg-4 center-block" style="width: auto; padding-bottom: 25px;">
-                    <img src="assets/headShot.png" height="auto" width="auto" class="img-responsive headshot ">
-                    <br>
-                </div>
+<!--                <div class="col-lg-4 center-block" style="width: auto; padding-bottom: 25px;">-->
+<!--                    <img src="assets/headShot.png" height="auto" width="auto" class="img-responsive headshot ">-->
+<!--                    <br>-->
+<!--                </div>-->
                 <div class="col-lg-6 center-block" id="aboutMe" style="font-size: 25px;">
-                    I'm a software engineer that enjoys both QA Automation and Development work. I revel in thinking outside
-                    the box and abstractly. When I'm not trying to solve problems, I enjoy dining around Austin's best eateries.
+                    I'm a software engineer that enjoys both front and back end development. I revel in thinking outside
+                    the box and abstractly.
                     <div style="padding-top: 20px">
                         <p style=" font-size: 30px; text-align: center; padding-top: 20px;">Skills<br>
                             <span style=" font-size: 50px" class="devicons devicons-html5 hvr-bounce-in"
@@ -390,78 +389,78 @@
         </div>
 
 
-        <div id="transcontainer3"></div>
+<!--        <div id="transcontainer3"></div>-->
 
-        <div id="container4">
-            <div style="height:auto ;background-color:white;font-size:36px">
-                <section id="contact">
-                    <div class="container">
-                        <div class="row ">
-                            <div class="col-lg-12 text-center">
-                                <h1 style=" padding-top: 25px; padding-bottom: 10px; ">{Contact Me}</h1>
-                                <hr>
-                                <br>
-                            </div>
-                        </div>
-                        <div class="row ">
-                            <div class="col-md-6 center-block ">
-                                <form method="POST" action="https://formspree.io/baba.christine@gmail.com">
-                                    <div class="row control-group">
-                                        <div class="form-group col-lg-6 floating-label-form-group controls">
+<!--        <div id="container4">-->
+<!--            <div style="height:auto ;background-color:white;font-size:36px">-->
+<!--                <section id="contact">-->
+<!--                    <div class="container">-->
+<!--                        <div class="row ">-->
+<!--                            <div class="col-lg-12 text-center">-->
+<!--                                <h1 style=" padding-top: 25px; padding-bottom: 10px; ">{Contact Me}</h1>-->
+<!--                                <hr>-->
+<!--                                <br>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="row ">-->
+<!--                            <div class="col-md-6 center-block ">-->
+<!--                                <form method="POST" action="https://formspree.io/baba.christine@gmail.com">-->
+<!--                                    <div class="row control-group">-->
+<!--                                        <div class="form-group col-lg-6 floating-label-form-group controls">-->
 
-                                            <input type="text" class="form-control" placeholder="Name" id="name"
-                                                   name="name" required
-                                                   data-validation-required-message="Please enter your name.">
-                                            <p class="help-block text-danger"></p>
-                                        </div>
+<!--                                            <input type="text" class="form-control" placeholder="Name" id="name"-->
+<!--                                                   name="name" required-->
+<!--                                                   data-validation-required-message="Please enter your name.">-->
+<!--                                            <p class="help-block text-danger"></p>-->
+<!--                                        </div>-->
 
-                                        <div class="form-group col-lg-6 floating-label-form-group controls">
+<!--                                        <div class="form-group col-lg-6 floating-label-form-group controls">-->
 
-                                            <input type="email" class="form-control" placeholder="Email Address"
-                                                   id="email" name="email" required
-                                                   data-validation-required-message="Please enter your email address.">
-                                            <p class="help-block text-danger"></p>
-                                        </div>
-                                    </div>
+<!--                                            <input type="email" class="form-control" placeholder="Email Address"-->
+<!--                                                   id="email" name="email" required-->
+<!--                                                   data-validation-required-message="Please enter your email address.">-->
+<!--                                            <p class="help-block text-danger"></p>-->
+<!--                                        </div>-->
+<!--                                    </div>-->
 
-                                    <div class="row control-group">
-                                        <div class="form-group col-lg-12 floating-label-form-group controls">
+<!--                                    <div class="row control-group">-->
+<!--                                        <div class="form-group col-lg-12 floating-label-form-group controls">-->
 
-                                            <textarea rows="14" class="form-control" placeholder="Message"
-                                                      name="message " id="message"
-                                                      required
-                                                      data-validation-required-message="Please enter a message."></textarea>
-                                            <p class="help-block text-danger"></p>
-                                            <div id="success"></div>
-                                            <button type="submit" class="btn" style="float:left;">Send</button>
-
-
-                                        </div>
-
-                                    </div>
-
-                                </form>
-                            </div>
+<!--                                            <textarea rows="14" class="form-control" placeholder="Message"-->
+<!--                                                      name="message " id="message"-->
+<!--                                                      required-->
+<!--                                                      data-validation-required-message="Please enter a message."></textarea>-->
+<!--                                            <p class="help-block text-danger"></p>-->
+<!--                                            <div id="success"></div>-->
+<!--                                            <button type="submit" class="btn" style="float:left;">Send</button>-->
 
 
-                            <div class="col-lg-6 center-block">
+<!--                                        </div>-->
 
-                                <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US"
-                                     data-type="vertical" data-theme="light" data-vanity="christinebaba"><a
-                                        class="LI-simple-link"
-                                        href='https://www.linkedin.com/in/christinebaba?trk=profile-badge'>Christine
-                                    Baba</a></div>
+<!--                                    </div>-->
 
-                                <!--<a href="https://www.linkedin.com/in/christinebaba" title="LinkedIn" target="_blank">-->
-                                <!--<i class="fa fa-linkedin-square fa-5x hvr-bounce-in" aria-hidden="true"-->
-                                <!--style="padding-right: 20px"></i></a>-->
+<!--                                </form>-->
+<!--                            </div>-->
 
-                            </div>
-                        </div>
-                    </div>
-                </section>
-            </div>
-        </div>
+
+<!--                            <div class="col-lg-6 center-block">-->
+
+<!--                                <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US"-->
+<!--                                     data-type="vertical" data-theme="light" data-vanity="christinebaba"><a-->
+<!--                                        class="LI-simple-link"-->
+<!--                                        href='https://www.linkedin.com/in/christinebaba?trk=profile-badge'>Christine-->
+<!--                                    Baba</a></div>-->
+
+<!--                                &lt;!&ndash;<a href="https://www.linkedin.com/in/christinebaba" title="LinkedIn" target="_blank">&ndash;&gt;-->
+<!--                                &lt;!&ndash;<i class="fa fa-linkedin-square fa-5x hvr-bounce-in" aria-hidden="true"&ndash;&gt;-->
+<!--                                &lt;!&ndash;style="padding-right: 20px"></i></a>&ndash;&gt;-->
+
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </section>-->
+<!--            </div>-->
+<!--        </div>-->
         <br>
 
         <div id="transcontainer4"></div>
