--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
           integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link href='//cdn.jsdelivr.net/devicons/1.8.0/css/devicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">      
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.0/css/hover.css"/>
     <link rel="stylesheet" type="text/css" href="assets/style.css">
     <link href="https://fonts.googleapis.com/css?family=Nixie One" rel="stylesheet">
@@ -68,11 +69,11 @@
 <!--                    <br>-->
 <!--                </div>-->
                 <div class="col-lg-6 center-block" id="aboutMe" style="font-size: 25px;">
-                    I'm a software engineer that enjoys both front and back end development. I revel in thinking outside
-                    the box and abstractly.
+                    Finding a Software Engineer who loves being technical, but is also customer savvy is like a needle in a haystack and I'm the needle you've been looking for.
+                    My core values include Transparency, Empathy, Integrity &  to Always Be Learning! 
                     <div style="padding-top: 20px">
                         <p style=" font-size: 30px; text-align: center; padding-top: 20px;">Skills<br>
-                            <span style=" font-size: 50px" class="devicons devicons-html5 hvr-bounce-in"
+                            <span style=" font-size: 50px" class="devicons devicon-python-plain-wordmark hvr-bounce-in"
                                   title="HTML5"></span>
                             <span style=" font-size: 50px" class="devicons devicons-css3 hvr-bounce-in"
                                   title="CSS"></span>
