--- a/index.html
+++ b/index.html
@@ -75,24 +75,22 @@
                         <p style=" font-size: 30px; text-align: center; padding-top: 20px;">Skills<br>
                             <span style=" font-size: 50px" class="devicons devicon-python-plain-wordmark hvr-bounce-in"
                                   title="HTML5"></span>
-                            <span style=" font-size: 50px" class="devicons devicons-css3 hvr-bounce-in"
+                            <span style=" font-size: 50px" class="devicons devicon-react-original colored hvr-bounce-in"
                                   title="CSS"></span>
                             <span style=" font-size: 50px" class="devicons devicons-javascript hvr-bounce-in"
                                   title="Javascript"></span>
-                            <span style=" font-size: 50px" class="devicons devicons-ruby hvr-bounce-in"
+                            <span style=" font-size: 50px" class="devicons devicon-docker-plain-wordmark hvr-bounce-in"
                                   title="Ruby"></span>
                             <span style=" font-size: 50px" class="devicons devicons-rails hvr-bounce-in"
                                   title="Rails"></span>
-                            <span style=" font-size: 50px" class="devicons devicons-nodejs hvr-bounce-in"
+                            <span style=" font-size: 50px" class="devicons devicon-googlecloud-plain-wordmark hvr-bounce-in"
                                   title="NodeJS"></span>
-                            <span style=" font-size: 50px" class="devicons devicons-npm hvr-bounce-in"
+                            <span style=" font-size: 50px" class="devicons devicon-apple-original hvr-bounce-in"
                                   title="NPM"></span>
                             <span style=" font-size: 50px" class="devicons devicons-postgresql hvr-bounce-in"
                                   title="PSQL"></span>
                             <span style=" font-size: 50px" class="devicons devicons-mysql hvr-bounce-in"
                                   title="mySQL"></span>
-                            <span style=" font-size: 50px" class="devicons devicons-heroku hvr-bounce-in"
-                                  title="Heroku"></span>
                         </p>
                     </div>
                 </div>
