--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     Finding a Software Engineer who loves being technical, but is also customer savvy is like a needle in a haystack and I'm the needle you've been looking for.
                     My core values include Transparency, Empathy, Integrity &  to Always Be Learning! 
                     <div style="padding-top: 20px">
-                        <p style=" font-size: 30px; text-align: center; padding-top: 20px;">Skills<br>
+                        <p style=" font-size: 30px; text-align: center; padding-top: 20px;">Favorite Tech<br>
                             <span style=" font-size: 50px" class="devicons devicon-python-plain-wordmark hvr-bounce-in"
                                   title="HTML5"></span>
                             <span style=" font-size: 50px" class="devicons devicon-react-original colored hvr-bounce-in"
@@ -83,9 +83,9 @@
                                   title="Ruby"></span>
                             <span style=" font-size: 50px" class="devicons devicons-rails hvr-bounce-in"
                                   title="Rails"></span>
-                            <span style=" font-size: 50px" class="devicons devicon-googlecloud-plain-wordmark hvr-bounce-in"
+                            <span style=" font-size: 50px" class="devicons devicon-googlecloud-plain hvr-bounce-in"
                                   title="NodeJS"></span>
-                            <span style=" font-size: 50px" class="devicons devicon-apple-original hvr-bounce-in"
+                            <span style=" font-size: 50px" class="devicons devicon-flask-original hvr-bounce-in"
                                   title="NPM"></span>
                             <span style=" font-size: 50px" class="devicons devicons-postgresql hvr-bounce-in"
                                   title="PSQL"></span>
