--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
                 <a href="https://github.com/christin3" title="Github" target="_blank">
                     <i class="fa fa-github fa-2x hvr-bounce-in " aria-hidden="true"
                        style="padding-top: 5px;"></i></a>
+                <a href="https://https://www.linkedin.com/in/christinebaba/" title="LinkedIn" target="_blank">
+                    <i class="fa fa-linkedin fa-2x hvr-bounce-in " aria-hidden="true"
+                       style="padding-top: 5px;"></i></a>
             </div>
         </div>
     </nav>
