--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                        style="padding-top: 5px;"></i></a>
                 <a href="https://https://www.linkedin.com/in/christinebaba/" title="LinkedIn" target="_blank">
                     <i class="fa fa-linkedin fa-2x hvr-bounce-in " aria-hidden="true"
-                       style="padding-top: 5px;"></i></a>
+                       style="padding-top: 5px; padding-left: 5px;"></i></a>
             </div>
         </div>
     </nav>
